After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 608692 - 'request-read' never emitted for POST message
'request-read' never emitted for POST message
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: HTTP Transport
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2010-02-01 15:17 UTC by Zeeshan Ali
Modified: 2010-02-01 22:46 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Zeeshan Ali 2010-02-01 15:17:58 UTC
As I explained on IRC, I am trying to handle an incoming POST request in chunks. Here is the irc log that explains what I am doing & what is going wrong:

<zeenix> in handler for 'request-started', i connect to got_headers
<zeenix> 'got-headers' of the msg
<zeenix> when that is called, i connect to 'got-chunk' on the msg and also to 'request-read' on the server
<zeenix> i then pause the message & defer some processing to mainloop
<zeenix> after that processing is done, i unpause the message and then wait for the 'request-read' to be emitted for this message
<zeenix> but the hander for 'request-read' is never called
<zeenix> s/hander/handler/
<zeenix> danw: so am i doing anything wrong here?
<zeenix> oh and in the server handler, i just return without doing anything if the method is "POST"
<danw> do you get the got-chunks?
<zeenix> yes but let me make sure..
<danw> i think you're in uncharted waters here (processing a server request a chunk at a time) so there may be some small bug that only affects that cases. (shouldn't be any major bugs though since it's very similar to other cases that definitely do work)
<zeenix> ok 'got-chunks' is called and all bytes sent are received
<zeenix> danw: thing is that i have to do it this ways cause we are talking about multimedia contents here
<zeenix> and they could be HUGE
<danw> yeah
<zeenix> even if it's an MP3, it's usuall >3MiB
<danw> it's *supposed* to work. it's just that i don't think anyone has actually really tested it much before