[SoupServer] actually emit request-read, as documented

https://bugzilla.gnome.org/show_bug.cgi?id=608692